--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dependencies": {
         "@nestjs/common": "^5.0.0",
         "@nestjs/core": "^5.0.0",
+        "axios": "^0.18.0",
         "fastify-formbody": "^2.0.0",
         "reflect-metadata": "^0.1.12",
         "rxjs": "^6.0.0",
