--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "dependencies": {
         "@nestjs/common": "^5.0.0",
         "@nestjs/core": "^5.0.0",
+        "@nestjs/typeorm": "^5.2.0",
         "axios": "^0.18.0",
         "dotenv": "^6.0.0",
         "fastify-formbody": "^2.0.0",
-        "mongoose": "^5.2.9",
+        "mongodb": "^3.1.4",
         "reflect-metadata": "^0.1.12",
         "rxjs": "^6.0.0",
+        "typeorm": "^0.2.7",
         "typescript": "^2.6.2",
         "winston": "^3.0.0"
     },
@@ -33,8 +35,6 @@
         "@types/dotenv": "^4.0.3",
         "@types/express": "^4.0.39",
         "@types/jest": "^21.1.8",
-        "@types/mongodb": "^3.1.4",
-        "@types/mongoose": "^5.2.7",
         "@types/node": "^9.3.0",
         "@types/supertest": "^2.0.4",
         "jest": "^21.2.1",
