--- a/package.json
+++ b/package.json
@@ -13,20 +13,18 @@
         "start:hmr": "node dist/server",
         "test": "jest",
         "test:cov": "jest --coverage",
-        "test:e2e": "jest --config ./test/jest-e2e.json",
-        "webpack": "webpack --config webpack.config.js"
+        "test:e2e": "jest --config ./test/jest-e2e.json"
     },
     "dependencies": {
         "@nestjs/common": "^5.0.0",
         "@nestjs/core": "^5.0.0",
-        "@nestjs/typeorm": "^5.2.0",
+        "@nestjs/mongoose": "^5.2.1",
         "axios": "^0.18.0",
         "dotenv": "^6.0.0",
         "fastify-formbody": "^2.0.0",
-        "mongodb": "^3.1.4",
+        "mongoose": "^5.2.10",
         "reflect-metadata": "^0.1.12",
         "rxjs": "^6.0.0",
-        "typeorm": "^0.2.7",
         "typescript": "^2.6.2",
         "winston": "^3.0.0"
     },
@@ -35,6 +33,7 @@
         "@types/dotenv": "^4.0.3",
         "@types/express": "^4.0.39",
         "@types/jest": "^21.1.8",
+        "@types/mongoose": "^5.2.7",
         "@types/node": "^9.3.0",
         "@types/supertest": "^2.0.4",
         "jest": "^21.2.1",
@@ -46,10 +45,7 @@
         "ts-loader": "^4.1.0",
         "ts-node": "^4.1.0",
         "tsconfig-paths": "^3.1.1",
-        "tslint": "5.3.2",
-        "webpack": "^4.2.0",
-        "webpack-cli": "^2.0.13",
-        "webpack-node-externals": "^1.6.0"
+        "tslint": "5.3.2"
     },
     "jest": {
         "moduleFileExtensions": [
