--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "format": "prettier --write \"**/*.ts\"",
         "start": "ts-node -r tsconfig-paths/register src/main.ts",
         "start:dev": "nodemon",
+        "start:debug": "nodemon --config nodemon.debug.json",
         "prestart:prod": "rm -rf dist && tsc",
         "start:prod": "node dist/main.js",
         "start:hmr": "node dist/server",
