--- a/package.json
+++ b/package.json
@@ -17,36 +17,36 @@
         "test:e2e": "jest --config ./test/jest-e2e.json"
     },
     "dependencies": {
-        "@nestjs/common": "^5.0.0",
-        "@nestjs/core": "^5.0.0",
+        "@nestjs/common": "^5.2.2",
+        "@nestjs/core": "^5.2.2",
         "@nestjs/mongoose": "^5.2.1",
         "axios": "^0.18.0",
         "dotenv": "^6.0.0",
-        "fastify-formbody": "^2.0.0",
+        "fastify-formbody": "^2.0.1",
         "mongoose": "^5.2.10",
         "reflect-metadata": "^0.1.12",
-        "rxjs": "^6.0.0",
-        "typescript": "^2.6.2",
+        "rxjs": "^6.2.2",
+        "typescript": "^3.0.1",
         "winston": "^3.0.0"
     },
     "devDependencies": {
-        "@nestjs/testing": "^5.0.0",
+        "@nestjs/testing": "^5.2.2",
         "@types/dotenv": "^4.0.3",
         "@types/express": "^4.0.39",
-        "@types/jest": "^21.1.8",
+        "@types/jest": "^23.3.1",
         "@types/mongoose": "^5.2.7",
-        "@types/node": "^9.3.0",
-        "@types/supertest": "^2.0.4",
-        "jest": "^21.2.1",
-        "nodemon": "^1.14.1",
-        "prettier": "^1.11.1",
-        "semver": "^5.5.0",
+        "@types/node": "^10.9.2",
+        "@types/supertest": "^2.0.5",
+        "jest": "^23.5.0",
+        "nodemon": "^1.18.3",
+        "prettier": "^1.14.2",
+        "semver": "^5.5.1",
         "supertest": "^3.0.0",
-        "ts-jest": "^21.2.4",
-        "ts-loader": "^4.1.0",
-        "ts-node": "^4.1.0",
-        "tsconfig-paths": "^3.1.1",
-        "tslint": "5.3.2"
+        "ts-jest": "^23.1.4",
+        "ts-loader": "^4.5.0",
+        "ts-node": "^7.0.1",
+        "tsconfig-paths": "^3.5.0",
+        "tslint": "^5.11.0"
     },
     "jest": {
         "moduleFileExtensions": [
