up menu controller

--- a/package.json
+++ b/package.json
@@ -19,11 +19,16 @@
     "dependencies": {
         "@nestjs/common": "^5.2.2",
         "@nestjs/core": "^5.2.2",
+        "@nestjs/jwt": "^0.1.3",
         "@nestjs/mongoose": "^5.2.1",
+        "@nestjs/passport": "^1.1.0",
         "axios": "^0.18.0",
         "dotenv": "^6.0.0",
         "fastify-formbody": "^2.0.1",
         "mongoose": "^5.2.10",
+        "passport": "^0.4.0",
+        "passport-http-bearer": "^1.0.1",
+        "passport-jwt": "^4.0.0",
         "reflect-metadata": "^0.1.12",
         "rxjs": "^6.2.2",
         "typescript": "^3.0.1",
