--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "axios": "^0.18.0",
         "dotenv": "^6.0.0",
         "fastify-formbody": "^2.0.1",
+        "jsonwebtoken": "^8.3.0",
         "mongoose": "^5.2.10",
         "passport": "^0.4.0",
         "passport-http-bearer": "^1.0.1",
