--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@nestjs/core": "^5.2.2",
         "@nestjs/jwt": "^0.1.3",
         "@nestjs/mongoose": "^5.2.1",
+        "@nestjs/websockets": "^5.3.1",
         "axios": "^0.18.0",
         "dotenv": "^6.0.0",
         "fastify-formbody": "^2.0.1",
