up use socketioWildcard

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "mongoose": "^5.2.10",
         "reflect-metadata": "^0.1.12",
         "rxjs": "^6.2.2",
+        "socketio-wildcard": "^2.0.0",
         "typescript": "^3.0.1",
         "winston": "^3.0.0"
     },
