--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
     "tabWidth": 4,
     "singleQuote": true,
     "semi": false,
-    "trailingComma": "all"
+    "trailingComma": "all",
+    "printWidth": 120
 }
