--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "license": "MIT",
     "scripts": {
         "format": "prettier --write \"**/*.ts\"",
-        "start": "ts-node -r tsconfig-paths/register src/main.ts",
+        "start": "export APP_ENV=dev && ts-node -r tsconfig-paths/register src/main.ts",
         "start:dev": "nodemon",
         "start:debug": "nodemon --config nodemon.debug.json",
         "prestart:prod": "rm -rf dist && tsc",
